--- a/02-Challenge/Develop/index.html
+++ b/02-Challenge/Develop/index.html
@@ -26,7 +26,7 @@
     </section>
     <section class="hero" alt="Digital marketing meeting"></section>
     <section class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook on table" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
