--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             </ul>
         </section>
     </section>
-    <section class="hero" alt="Digital marketing meeting"></section>
+    
+    <section class="hero" alt="Digital marketing meeting">
+
+    </section>
+
     <section class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./images/search-engine-optimization.jpg" alt="Notebook on table" class="float-left" />
