--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </ul>
         </section>
     </section>
-    
-    <section class="hero" alt="Digital marketing meeting">
 
+    <section>
+            <img src="./images/digital-marketing-meeting.jpg" alt="Digital marketing meeting" class="hero">
     </section>
 
     <section class="content">
